--- a/docs-source/src/Main.css
+++ b/docs-source/src/Main.css
@@ -4,20 +4,39 @@ body {
      color: white !important;
 }
 
+li a, li a:hover, li a:visited, li a:link, li a:active
+{
+    text-decoration: none;
+}
+
+li {
+     color: #bf1fff;
+     font-size: 20px;
+}
+
+li a {
+    color: #be6ae8;
+    font-size: 20px;
+}
+
+li a:hover {
+    color: #f442eb;
+}
+
+.logoImage {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+}
+
 .navHeaderBox
 {
     background-color: #b860f7;
     width: 100%;
     font-weight: bold;
     text-align: left;
-    font-size: 20px;
+    font-size: 17px;
     padding: 10px;
-    font-family: Oxygen, Calibri, Ariel;
-}
-
-.navHeaderBox:hover
-{
-    background-color: #ae18bf;
 }
 
 .navHeaderBox a
@@ -26,22 +45,42 @@ body {
     color: white;
 }
 
-.navHeaderBox a:visited
+.navHeaderBox a, .navHeaderBox a:hover, .navHeaderBox a:visited, .navHeaderBox a:link, .navHeaderBox a:active
 {
     text-decoration: none;
+}
+
+.navHeaderBox a:active
+{
+    background-color: #ae18bf;
+}
+
+.navHeaderBox a:visited
+{
     color: white;
+}
+
+.navHeaderBox:hover
+{
+    background-color: #ae18bf;
+}
+
+.navHeaderBoxAtPage
+{
+    background-color: #ae18bf;
 }
 
 .navItem {
     font-weight: normal;
 }
 
-@font-face {
-    font-family: Roboto;
-    src: url('https://fonts.googleapis.com/css?family=Roboto');
+.pagePadding
+{
+    padding-left: 70px;
+    padding-top: 40px;
 }
 
 @font-face {
-    font-family: Oxygen;
-    src: url('https://fonts.googleapis.com/css?family=Oxygen');
+    font-family: Roboto;
+    src: url('https://fonts.googleapis.com/css?family=Roboto');
 }
