--- a/docs-source/src/Main.css
+++ b/docs-source/src/Main.css
@@ -2,6 +2,7 @@ body {
      font-family: Roboto, Calibri, Ariel;
      background-color: #1e1e1e !important;
      color: white !important;
+     overflow-x: hidden;
 }
 
 li a, li a:hover, li a:visited, li a:link, li a:active
@@ -76,8 +77,9 @@ li a:hover {
 
 .pagePadding
 {
-    padding-left: 70px;
+    padding-left: 20px;
     padding-top: 40px;
+    padding-right: 20px;
 }
 
 @font-face {
