--- a/Emotion.Web/wwwroot/style.css
+++ b/Emotion.Web/wwwroot/style.css
@@ -39,33 +39,40 @@ canvas {
 * https://nzbin.github.io/three-dots/
 */
 
-.dot-gathering {
+.dot-parent {
     position: relative;
-    width: 12px;
-    height: 12px;
-    border-radius: 6px;
-    background-color: white;
-    color: transparent;
-    margin: -1px 0;
+    width: 32px;
+    height: 32px;
 }
 
-.dot-gathering::before, .dot-gathering::after {
+.dot-gathering {
+    width: 100%;
+    height: 100%;
+    border-radius: 6px;
+    background-image: url("./EmotionLogo.png");
+    background-position: center;
+    background-size: cover;
+    color: transparent;
+    position: relative;
+}
+
+.dot-pseudo {
+    z-index: -1;
+}
+
+.dot-pseudo::before, .dot-pseudo::after {
     content: '';
     display: inline-block;
     position: absolute;
     top: 0;
-    left: -50px;
-    width: 12px;
-    height: 12px;
-    border-radius: 6px;
+    left: -75px;
+    width: 32px;
+    height: 32px;
+    border-radius: 10px;
     background-color: white;
     color: transparent;
     opacity: 0;
-    animation: dotGathering 2s infinite ease-in;
-}
-
-.dot-gathering::after {
-    animation-delay: .5s;
+    animation: dotGathering 1.5s infinite ease-in;
 }
 
 @keyframes dotGathering {
@@ -74,13 +81,13 @@ canvas {
         transform: translateX(0);
     }
 
-    35%, 60% {
-        opacity: 1;
-        transform: translateX(50px);
+    35%, 65% {
+        opacity: 0.5;
+        transform: translateX(75px);
     }
 
     100% {
         opacity: 0;
-        transform: translateX(100px);
+        transform: translateX(150px);
     }
 }
