--- a/Emotion/Core/Platform/Implementation/Web/Razor/_Imports.razor
+++ b/Emotion/Core/Platform/Implementation/Web/Razor/_Imports.razor
@@ -1,3 +1,3 @@
 ﻿@using Microsoft.JSInterop
-@using Emotion.Platform.Implementation.Web
-@using Emotion.Platform.Implementation.Web.Razor
+@using Emotion.Core.Platform.Implementation.Web
+@using Emotion.Core.Platform.Implementation.Web.Razor
